fixed color for dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ body {
 
 .dark-mode {
   background-color: #0d1117;
+  color: #C9D1D9;
 }
 
 .card{
